--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name="openssl" %}
-{% set version="1.0.2k" %}
+{% set version="1.0.2l" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: http://www.openssl.org/source/{{ name }}-{{ version }}.tar.gz
-  sha256: 6b3977c61f2aedf0f96367dcfb5c6e578cf37e7b8d913b4ecb6643c3cb88d8c0
+  sha256: ce07195b659e75f4e1db43552860070061f156a98bb37b672b101ba6e3ddf30c
 
 build:
   skip: True  # [win and py36]
@@ -24,7 +24,6 @@ build:
     - lib/pkgconfig/openssl.pc           # [unix]
   features:
     - vc9     # [win and py27]
-    - vc10    # [win and py34]
     - vc14    # [win and py35]
     - vc14    # [win and py36]
 
@@ -42,7 +41,6 @@ requirements:
 test:
   requires:
     - python   2.7.*   # [py27]
-    - python   3.4.*   # [py34]
     - python   3.5.*   # [py35]
     - python   3.6.*   # [py36]
   imports:
