--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,11 +13,9 @@ source:
     - 0001-win32-Fix-yasm-compatibility.patch
 
 build:
-  skip: True  # [win and py36]
-  number: 1
+  number: 2
   no_link: lib/libcrypto.so.1.0.0        # [linux]
   no_link: lib/libcrypto.1.0.0.dylib     # [osx]
-  detect_binary_files_with_prefix: True  # [unix]
   has_prefix_files:                      # [unix]
     - bin/c_rehash                       # [unix]
     - include/openssl/opensslconf.h      # [unix]
@@ -25,10 +23,7 @@ build:
     - lib/pkgconfig/libssl.pc            # [unix]
     - lib/pkgconfig/openssl.pc           # [unix]
   features:
-    - vc9     # [win and py27]
-    - vc14    # [win and py35]
-    - vc14    # [win and py36]
-
+    - vc{{ vc }}     # [win]
 
 requirements:
   build:
