--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     - 0001-win32-Fix-yasm-compatibility.patch
 
 build:
-  number: 3
+  number: 4
   no_link: lib/libcrypto.so.1.0.0        # [linux]
   no_link: lib/libcrypto.1.0.0.dylib     # [osx]
   has_prefix_files:                      # [unix]
@@ -24,6 +24,8 @@ build:
     - lib/pkgconfig/openssl.pc           # [unix]
   features:
     - vc{{ vc }}     # [win]
+  run_exports:
+    - {{ pin_subpackage('openssl', max_pin='x.x.x') }}
 
 requirements:
   build:
