--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,10 +30,8 @@ requirements:
   build:
     - {{ compiler('c') }}
     - yasm               # [win32]
-    - perl               # [win]
+    - perl
     - make               # [unix]
-  host:                  # [unix]
-    - perl               # [unix]
   run:
     - ca-certificates
 
