--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name="openssl" %}
-{% set version="1.0.2p" %}
+{% set version="1.1.1" %}
 
 package:
   name: {{ name|lower }}
@@ -8,29 +8,33 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: http://www.openssl.org/source/{{ name }}-{{ version }}.tar.gz
-  sha256: 50a98e07b1a89eb8f6a99477f262df71c6fa7bef77df4dc83025a2845c827d00
+  sha256: 2836875a0f89c03d0fdf483941512613a50cfb421d6fd94b9f41d7279d586a3d
   patches:
     - 0001-win32-Fix-yasm-compatibility.patch
 
 build:
   number: 0
-  no_link: lib/libcrypto.so.1.0.0        # [linux]
-  no_link: lib/libcrypto.1.0.0.dylib     # [osx]
+  no_link: lib/libcrypto.so.1.1        # [linux]
+  no_link: lib/libcrypto.1.1.dylib     # [osx]
   has_prefix_files:                      # [unix]
     - bin/c_rehash                       # [unix]
-    - include/openssl/opensslconf.h      # [unix]
     - lib/pkgconfig/libcrypto.pc         # [unix]
     - lib/pkgconfig/libssl.pc            # [unix]
     - lib/pkgconfig/openssl.pc           # [unix]
   run_exports:
+    # openssl's versioning is X.Y.Z(rev), where rev is really the patch release ID
+    #    This pin allows the patch release to be >= the build-time openssl version.
     - {{ pin_subpackage('openssl', max_pin='x.x.x') }}
 
 requirements:
   build:
     - {{ compiler('c') }}
-    - yasm               # [win32]
-    - perl
+    - nasm               # [win]
     - make               # [unix]
+  host:
+    # technically a build tool, but the windows makefile really wants to find it in the host env.
+    #    easier to do this than carry a patch.
+    - perl
   run:
     - ca-certificates
 
