--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name="openssl" %}
-{% set version="1.1.1" %}
+{% set version="1.1.1a" %}
 
 package:
   name: {{ name|lower }}
@@ -8,9 +8,9 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: http://www.openssl.org/source/{{ name }}-{{ version }}.tar.gz
-  sha256: 2836875a0f89c03d0fdf483941512613a50cfb421d6fd94b9f41d7279d586a3d
-  patches:
-    - 0002-crypto-sm2-sm2_sign.c-ensure-UINT16_MAX-is-properly-.patch
+  sha256: fc20130f8b7cbd2fb918b2f14e2f429e109c31ddd0fb38fc5d71d9ffed3f9f41
+  # patches:
+  #   - 0002-crypto-sm2-sm2_sign.c-ensure-UINT16_MAX-is-properly-.patch
 
 build:
   number: 0
