--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set name="openssl" %}
-{% set version="1.1.1a" %}
+{% set name = "openssl" %}
+{% set version = "1.1.1b" %}
 
 package:
   name: {{ name|lower }}
@@ -8,9 +8,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: http://www.openssl.org/source/{{ name }}-{{ version }}.tar.gz
-  sha256: fc20130f8b7cbd2fb918b2f14e2f429e109c31ddd0fb38fc5d71d9ffed3f9f41
-  # patches:
-  #   - 0002-crypto-sm2-sm2_sign.c-ensure-UINT16_MAX-is-properly-.patch
+  sha256: 5c557b023230413dfb0756f3137a13e6d726838ccd1430888ad15bfb2b43ea4b
 
 build:
   number: 0
