--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     - 0001-Don-t-use-USE_BCRYPTGENRANDOM-for-VS-older-than-2015.patch
 
 build:
-  number: 0
+  number: 1
   no_link: lib/libcrypto.so.1.1        # [linux]
   no_link: lib/libcrypto.1.1.dylib     # [osx]
   has_prefix_files:                      # [unix]
@@ -21,6 +21,8 @@ build:
     - lib/pkgconfig/libcrypto.pc         # [unix]
     - lib/pkgconfig/libssl.pc            # [unix]
     - lib/pkgconfig/openssl.pc           # [unix]
+    - lib/libcrypto.so.1.1        # [linux]
+    - lib/libcrypto.1.1.dylib     # [osx]
   run_exports:
     # openssl's versioning is X.Y.Z(rev), where rev is really the patch release ID
     #    This pin allows the patch release to be >= the build-time openssl version.
@@ -43,12 +45,16 @@ requirements:
     - ca-certificates
 
 test:
+  # Not sure this does anything!
   downstreams:
+    - python
+  requires:
     - python
   commands:
     - copy NUL checksum.txt        # [win]
     - touch checksum.txt           # [unix]
     - openssl sha256 checksum.txt
+    - python -c "import urllib.request; urllib.request.urlopen('https://pypi.org')"
 
 about:
   home: http://www.openssl.org/
