--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,13 +21,15 @@ build:
     - lib/pkgconfig/libcrypto.pc         # [unix]
     - lib/pkgconfig/libssl.pc            # [unix]
     - lib/pkgconfig/openssl.pc           # [unix]
-    - lib/libcrypto.so.1.1        # [linux]
-    - lib/libcrypto.1.1.dylib     # [osx]
   run_exports:
     # openssl's versioning is X.Y.Z(rev), where rev is really the patch release ID
     #    This pin allows the patch release to be >= the build-time openssl version.
     - {{ pin_subpackage('openssl', max_pin='x.x.x') }}
-  detect_binary_files_with_prefix: False
+  detect_binary_files_with_prefix: True
+  binary_has_prefix_files:
+    - lib/libcrypto.so.1.1  # [linux]
+    - lib/libcrypto.1.1.dylib  # [osx]
+    - lib/libcrypto.a  # [unix]
 
 requirements:
   build:
