build 3, add ppc64le random patch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,9 +11,11 @@ source:
   sha256: 1e3a91bc1f9dfce01af26026f856e064eab4c8ee0a8f457b5ae30b40b8b711f2
   patches:
     - 0001-Don-t-use-USE_BCRYPTGENRANDOM-for-VS-older-than-2015.patch
+    # ppc64le fixes, see https://github.com/openssl/openssl/pull/10044/files
+    - 10044.patch
 
 build:
-  number: 2
+  number: 3
   no_link: lib/libcrypto.so.1.1        # [linux]
   no_link: lib/libcrypto.1.1.dylib     # [osx]
   has_prefix_files:                      # [unix]
