--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "openssl" %}
-{% set version = "1.1.1d" %}
+{% set version = "1.1.1e" %}
 
 package:
   name: {{ name|lower }}
@@ -8,17 +8,12 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: http://www.openssl.org/source/{{ name }}-{{ version }}.tar.gz
-  sha256: 1e3a91bc1f9dfce01af26026f856e064eab4c8ee0a8f457b5ae30b40b8b711f2
+  sha256: 694f61ac11cb51c9bf73f54e771ff6022b0327a43bbdfa1b2f19de1662a6dcbe
   patches:
     - 0001-Don-t-use-USE_BCRYPTGENRANDOM-for-VS-older-than-2015.patch
-    # ppc64le fixes, see https://github.com/openssl/openssl/pull/10044/files
-    - 10044.patch
-    # Fix for CVE-2019-1551
-    # https://github.com/openssl/openssl/commit/419102400a2811582a7a3d4a4e317d72e5ce0a8f
-    - 419102400a2811582a7a3d4a4e317d72e5ce0a8f.patch
 
 build:
-  number: 4
+  number: 0
   no_link: lib/libcrypto.so.1.1        # [linux]
   no_link: lib/libcrypto.1.1.dylib     # [osx]
   has_prefix_files:                      # [unix]
