--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,11 +47,8 @@ requirements:
     - ca-certificates
 
 test:
-  # Not sure this does anything!
-  downstreams:
-    - python
   requires:
-    - python
+    - python 3.7
     - six
   commands:
     - copy NUL checksum.txt        # [win]
