--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,6 +48,7 @@ requirements:
 
 test:
   requires:
+    - certifi  # [win]
     - python 3.7  # [not (osx and arm64)]
     - python 3.8  # [osx and arm64]
     - six
