Added description, license_url, and doc_source_url to about section

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,10 +57,18 @@ about:
   home: https://www.openssl.org/
   license_file: LICENSE
   license: OpenSSL
+  license_url: https://www.openssl.org/source/license.html
   license_family: Apache
   summary: OpenSSL is an open-source implementation of the SSL and TLS protocols
+  description: |
+    OpenSSL is a robust, commercial-grade, full-featured Open Source Toolkit
+    for the Transport Layer Security (TLS) protocol formerly known as the
+    Secure Sockets Layer (SSL) protocol. The protocol implementation is based
+    on a full-strength general purpose cryptographic library, which can also
+    be used stand-alone.
   dev_url: https://github.com/openssl/openssl
   doc_url: https://www.openssl.org/docs/man1.1.1/
+  doc_source_url: https://github.com/openssl/openssl/tree/OpenSSL_1_1_1-stable/doc
 
 extra:
   recipe-maintainers:
