Added feature for openssl patch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,9 @@ build:
   patches:
      - openssl-1.1.1-evp-kdf.patch
 
+  features: 
+    - openssl_evp_kdf
+
 requirements:
   build:
     - {{ compiler('c') }}
