Removing license and pointing to the correct one.  Also updating license in meta.yaml.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,8 +52,8 @@ test:
 
 about:
   home: https://www.openssl.org/
-  license_file: LICENSE
-  license: OpenSSL
+  license_file: LICENSE.txt
+  license: Apache-2.0
   license_family: Apache
   summary: OpenSSL is an open-source implementation of the SSL and TLS protocols
   description: |
