--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "openssl" %}
-{% set version = "3.0.15" %}
+{% set version = "3.0.16" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/openssl/openssl/releases/download/openssl-{{ version }}/openssl-{{ version }}.tar.gz
-  sha256: 23c666d0edf20f14249b3d8f0368acaee9ab585b09e1de82107c66e1f3ec9533
+  sha256: 57e03c50feab5d31b152af2b764f10379aecd8ee92f16c985983ce4a99f7ef86
 build:
   number: 0
   no_link: lib/libcrypto.so.3.0        # [linux]
@@ -33,13 +33,13 @@ requirements:
     - {{ compiler('c') }}
     - nasm               # [win]
     - make               # [unix]
-    - perl
+    - perl 5.*
   run:
     - ca-certificates
 
 test:
   requires:
-    - python 3.8
+    - python 3.9
     - pkg-config
   commands:
     - copy NUL checksum.txt        # [win]
